# dlkit

./: .actrc  .gitignore  .pre-commit-config.yaml  PLAN_GENERATIVE_ARCHITECTURE.md  README.md  REFACTORING_PLAN.md  plan.md  pyproject.toml  requirements.txt  tach.toml
.github/workflows/: templates-sync-check.yml  testing.yml
benchmarks/: benchmark_batched_muon.py  benchmark_precision_loads.py  benchmark_sparse_io_n10000.py  benchmark_zarr_dataloader.py
config/: config.toml  optuna_config.toml
docs/: integration_test_analysis.md  plan.md
docs/architecture/: README.md  coupling-assessment.md  deps.dot
docs/architecture/diagrams/: common.dot  domain.dot  engine.dot  infrastructure.dot  interfaces.dot  overview.dot  runtime.dot  shared.dot  tools.dot
docs/examples/: full_config_example.toml
examples/: config_architecture_demo.py  example_config.toml  optimizer_scheduler_test_config.toml  partial_config_demo.py  shape_free_inference_demo.py  test_subsettings_config.toml  tmp_test_config.toml  tmp_ts.parquet
examples/minimal_e2e/: README.md  __init__.py  config.toml  model.py
examples/tmp_cfg_case/: cfg.toml
scripts/: debug_config.py  ensure_commit_blank_line.sh  render_tach_dependency_graph.py  run_act.py  sync_templates.py
src/dlkit/: __init__.py  config.py  datamodules.py  errors.py  gnn.py  inference.py  io.py  metrics.py  metrics.py~  mlflow.py  mytypes.py  nn.py  pipeline.py  postprocessing.py  registry.py  results.py  settings.py
src/dlkit/callbacks/: __init__.py  numpy_writer.py  pipeline.py
src/dlkit/common/: __init__.py  common.md  errors.py  geometry.py  hooks.py  overrides.py  result_accessors.py  results.py  shapes.py  sources.py  state.py  types.py
src/dlkit/core/: __init__.py  shape_specs.py
src/dlkit/datamodules/: __init__.py  array.py  base.py  file_datamodule.py  forecasting.py  graph.py  in_memory.py  mmap_module.py  numpy_module.py  timeseries.py  utils.py
src/dlkit/datasets/: __init__.py  array.py  base.py  graph.py  lazy_dataset.py  lazy_dataset.py~  npy.py  numpy_dataset.py  split.py  timeseries.py
src/dlkit/datatypes/: __init__.py  basic.py  dataset.py  learning.py  run.py  training.py
src/dlkit/dataypes/: basic.py
src/dlkit/domain/: __init__.py  domain.md  losses.py  norms.py  results.py  state.py
src/dlkit/engine/: artifacts.py
src/dlkit/gnn/: __init__.py  gat.py  primitives.py  projection.py
src/dlkit/infrastructure/: __init__.py  hdf5.py  zarr.py
src/dlkit/interfaces/: __init__.py
src/dlkit/io/: __init__.py  arrays.py  hdf5.py  index.py  readers.py  settings.py  tables.py
src/dlkit/metrics/: __init__.py  temporal.py  vector.py
src/dlkit/networks/: blocks.py
src/dlkit/nn/: __init__.py
src/dlkit/optimization/: optimization.py
src/dlkit/register/: __init__.py  registry.py
src/dlkit/run/: __init__.py  inference.py  mlflow_training.py  optuna_training.py  run.py  training.py  vanilla_training.py
src/dlkit/runtime/: __init__.py
src/dlkit/scripts/: hparams.py  hparams_optimization.py  mlflow_server.py  mlflow_training.py  predict.py  predict_latest.py  start_mlflow_server.py  training.py
src/dlkit/settings/: __init__.py  base_settings.py  classes.py  data_settings.py  datamodule_settings.py  general_settings.py  mlflow_settings.py  model_settings.py  optuna_settings.py  paths_settings.py  run_settings.py  trainer_settings.py  types.py  utils.py
src/dlkit/setup/: datamodule.py  mlflow_client.py  mlflow_server.py  model.py  model_state.py  optimizer.py  pruner.py  scheduler.py  server.py  tracking.py  trainer.py  trainer.py~  transforms.py  trial.py
src/dlkit/shared/: __init__.py  hooks.py  result_accessors.py  results.py  shared.md  state.py
src/dlkit/transforms/: __init__.py  base.py  chain.py  chaining.py  chaining.py~  maps.py  minmax.py  pca.py  permute.py  pipeline.py  scalers.py  standard.py  subset.py
src/dlkit/utils/: defaults.py  general.py  import_utils.py  lightning.py  lightning_utils.py  loading.py  math.py  math_utils.py  mlflow_utils.py  optuna_utils.py  split.py  system_utils.py  torch_utils.py
studies/bio-surrogate/: run_experiment.py
studies/bio-surrogate/cae/: config.toml  cox.toml  p.toml  predict.py  tcell.toml  test.py  train.py  u.toml  visualize.py  visualize.py~
studies/bio-surrogate/ffnn/: train_ffnn.py
studies/bio-surrogate/model/: predict.py  visualize.py
studies/bio-surrogate/volume/: clean_data.py  collect_parameters.py  collect_volumes.py  train.py
studies/bio/cae/: config.toml  optuna_config.toml  split_data_to_txt.py  visualize.py
studies/bio/tft/: preprocess.py
studies/bio/volume/: clean_data.py  collect_parameters.py  collect_volumes.py
tests/: README.md  TESTING.md  _timeout_constants.py  conftest.py  sitecustomize.py  test_artifact_isolation.py  test_mock.py  test_timeouts.py
tests/architecture/: __init__.py  test_context_lifecycle.py  test_curated_dependency_graphs.py  test_import_rules.py  test_transform_architecture.py
tests/branchmarks/: benchmark_sparse_io_n10000.py
tests/common/: test_geometry.py
tests/core/: __init__.py  test_removed_exports.py  test_shape_specs.py
tests/core/datasets/: conftest.py  (+5 more)
tests/datamodules/: test_base_module.py
tests/datatypes/: basic.py
tests/domain/: test_functional_shared.py
tests/engine/: test_engine_accepts_job_config.py
tests/fixtures/: idx_split.json  mlflow_fixtures.py
tests/integration/: README.md  __init__.py  conftest.py  test_abc_shape_architecture.py  test_basic_integration.py  test_custom_metrics_integration.py  test_graph_components.py  test_graph_precision_lr_tuning.py  test_graph_staged_optimization_lr_tuning.py  test_hpo_real_execution.py  test_lr_tuner_transform_fitting.py  test_materializing_transform_e2e.py  test_mlflow_server_behavior.py  test_mlflow_training_integration.py  test_optuna_mlflow_integration.py  test_standard_staged_lr_tuning_control.py  test_transforms_persistence_and_inference.py
tests/interfaces/: __init__.py
tests/runtime/: __init__.py
tests/tools/: __init__.py
tests/transforms/: test_subset.py
tests/utils/: test_get_name.py
(+1458 files in other folders)
