[project]
name = "dlkit"
version = "0.1.0-alpha"
description = "custom modules and networks for pytorch integration with optuna and mlflow"
readme = "README.md"

authors = [
    { name = "constatza", email = "29166969+constatza@users.noreply.github.com" },
]

requires-python = ">=3.12, <3.14"
dependencies = [
    "numpy<3.0,>=2.1",
    "tomlkit<1.0.0,>=0.12.5",
    "pydantic<3.0.0,>=2.7.4",
    "lightning<3.0.0,>=2.3.2",
    "mlflow>=3.0,<4.0",
    "optuna<5,>=4",
    "torch>=2.8.0, <2.10.0",
    "dynaconf>=3.2.10",
    "loguru>=0.7.3",
    "polars>=1.4.1,<2.0.0",
    "pytorch-forecasting>=1.3.0",
    "psutil>=7.0.0",
    "torchmetrics>=1.7.1",
    "pydantic-settings>=2.10.1",
    "torch-geometric>=2.6.1",
    "typer>=0.16.1",
    "returns>=0.22.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.2",
    "optuna-integration>=4.5.0",
    "yarl>=1.9.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.138.7",
    "pre-commit>=4.2.0",
    "pyright>=1.1.405",
    "pytest<9.0.0,>=8.2.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
    "vulture>=2.14",
]


[project.optional-dependencies]
# Linux or Windows GPU build
gpu = ["torch"]

[project.scripts]
dlkit = "dlkit.interfaces.cli:cli_main"


[build-system]
requires = ["uv-build>=0.4.0"]
build-backend = "uv_build"


[tool.uv.sources]
torch = [
  # Default CPU build on Linux/Windows when no extras
  { index  = "pytorch-cpu", marker  = "extra == '' and sys_platform == 'linux'" },
  # macOS uses PyPI (Apple Silicon / CPU wheels are on PyPI)
  { index  = "pypi",        marker  = "extra == '' and sys_platform == 'darwin'" },
  # GPU build only when explicitly requested via: uv sync --extra gpu
  { index  = "pytorch-gpu", extra   = "gpu", marker  = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pypi"
url  = "https://pypi.org/simple"
explicit = true


[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pytorch-gpu"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "src",
]
markers = [
    "slow: kept for reference; no default deselection",
    "regression: critical regression tests that must never be removed or modified",
]
filterwarnings = [
    # Suppress Pydantic serialization warnings for lazy-loaded settings
    # These occur when settings use model_construct for partial loading without defaults
    "ignore:Pydantic serializer warnings:UserWarning",
]


[tool.ruff]
line-length = 100
target-version = "py313"
preview = true
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    #    "D", # pydocstyle
]



[tool.ruff.lint.pydocstyle]
convention = "google"
