[project]
name = "dlkit"
version = "0.1.0-alpha"
description = "custom modules and networks for pytorch integration with optuna and mlflow"
readme = "README.md"

authors = [
    { name = "constatza", email = "29166969+constatza@users.noreply.github.com" },
]

requires-python = ">=3.14, <3.15"
dependencies = [
    "numpy<3.0,>=2.1",
    "tomlkit<1.0.0,>=0.12.5",
    "pydantic<3.0.0,>=2.7.4",
    "lightning<3.0.0,>=2.3.2",
    "mlflow>=3.0,<4.0",
    "optuna<5,>=4",
    "loguru>=0.7.3",
    "polars>=1.4.1,<2.0.0",
    "pytorch-forecasting>=1.3.0",
    "psutil>=7.0.0",
    "torchmetrics>=1.7.1",
    "pydantic-settings>=2.10.1",
    "torch-geometric>=2.6.1",
    "tensordict>=0.6.0",
    "typer>=0.16.1",
    "returns>=0.22.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.2",
    "optuna-integration>=4.5.0",
    "yarl>=1.9.0",
    "platformdirs>=2.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.138.7",
    "prek",
    "pytest<9.0.0,>=8.2.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.13.1",
    "tach>=0.34.0",
    "ty>=0.0.1a21",
    "vulture>=2.14",
]


[project.optional-dependencies]
# Explicit accelerator selection is required for torch resolution.
cpu = ["torch>=2.8.0, <2.10.0"]
cu128 = ["torch>=2.8.0, <2.10.0"]
cu130 = ["torch>=2.8.0, <2.10.0"]

[project.scripts]
dlkit = "dlkit.interfaces.cli:cli_main"


[build-system]
requires = ["uv-build>=0.4.0,<0.11"]
build-backend = "uv_build"


[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
        { extra = "cu130" },
    ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu128"
url  = "https://download.pytorch.org/whl/cu128"
explicit = true


[[tool.uv.index]]
name = "pytorch-cu130"
url  = "https://download.pytorch.org/whl/cu130"
explicit = true



[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "src",
]
markers = [
    "slow: kept for reference; no default deselection",
    "regression: critical regression tests that must never be removed or modified",
]
filterwarnings = [
    # Suppress Pydantic serialization warnings for lazy-loaded settings
    # These occur when settings use model_construct for partial loading without defaults
    "ignore:Pydantic serializer warnings:UserWarning",
]


[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "B904",   # exception translation is intentional across CLI and service layers
]

[tool.ruff.lint.isort]
known-first-party = ["dlkit"]
known-third-party = ["lightning", "torch", "numpy", "loguru", "pytest", "tensordict", "torchmetrics", "optuna", "mlflow", "pydantic", "typer", "polars", "yaml"]

[tool.ruff.lint.per-file-ignores]
"src/dlkit/tools/io/config.py" = [
    "B903",   # small internal stub class is clearer than a dataclass here
]
"tests/**/*.py" = [
    "B011",   # assert False is occasionally used in test-only failure branches
    "B017",   # broad exception assertions are still used in compatibility tests
    "B028",   # stacklevel is low-value noise in warning assertions and fixtures
    "B903",   # test-local helper classes do not need dataclass conversion
]

[tool.ty.analysis]
respect-type-ignore-comments = true
allowed-unresolved-imports = []
replace-imports-with-any = []

[tool.ty.environment]
root = ["src", "tests"]
python-version = "3.14"
python-platform = "all"

[tool.ty.rules]
redundant-cast = "error"
unused-type-ignore-comment = "error"

[tool.ty.src]
respect-ignore-files = true

[tool.ty.terminal]
output-format = "concise"
error-on-warning = true

